Fixed spacing on stat sheet.

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -810,14 +810,15 @@ body {
     background-color: var(--off-white);
     height: 100px;
     /* max-width: 750px; */
-    width: 450px;
-    min-width: 250px;
+    width: 325px;
+    /* min-width: 200px; */
     padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    margin-top: 15px;
 }
 
 .green {
